--- a/1_A_Supervised_Learning_Multiple_Linear_Regression.ipynb
+++ b/1_A_Supervised_Learning_Multiple_Linear_Regression.ipynb
@@ -6,7 +6,7 @@
       "name": "1.A_Supervised Learning_Multiple Linear Regression.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP9ouS9MfbBExWN1hcrmVlt",
+      "authorship_tag": "ABX9TyPEpb0zZC/+BbWR085TDlxt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -694,6 +694,53 @@
       ],
       "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ybRWuKc5BIy1",
+        "outputId": "13914063-975a-434b-d169-bb9311e4aa37"
+      },
+      "source": [
+        "#Compared with KNeighborsRegressor\n",
+        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "#target = auto.price\n",
+        "X = auto.drop('price', axis = 1)\n",
+        "y = auto['price']\n",
+        "\n",
+        "#train and test set split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.5, random_state = 0)\n",
+        "\n",
+        "#initialize and train\n",
+        "linear = LinearRegression()\n",
+        "ridge = Ridge(random_state = 0)\n",
+        "knnreg = KNeighborsRegressor()\n",
+        "\n",
+        "for model in [linear, ridge,knnreg]: \n",
+        "  model.fit(X_train, y_train)\n",
+        "  print('{}(train): {:.6f}'.format(model.__class__.__name__ , model.score(X_train,y_train)))\n",
+        "  print('{}(test): {:.6f}'.format(model.__class__.__name__ , model.score(X_test,y_test)))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LinearRegression(train): 0.733358\n",
+            "LinearRegression(test): 0.737069\n",
+            "Ridge(train): 0.733355\n",
+            "Ridge(test): 0.737768\n",
+            "KNeighborsRegressor(train): 0.785238\n",
+            "KNeighborsRegressor(test): 0.767998\n"
+          ]
+        }
+      ]
     }
   ]
 }
