--- a/2_1_B_Unsupervised_Learning_Cluster_Analysis_(k_means).ipynb
+++ b/2_1_B_Unsupervised_Learning_Cluster_Analysis_(k_means).ipynb
@@ -6,7 +6,7 @@
       "name": "2.1_B_Unsupervised Learning_Cluster Analysis (k-means).ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOfWypcWukHPAU00PkAfQG",
+      "authorship_tag": "ABX9TyMkVNNW077zZJqnjbtq67A7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,36 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/sunnyskydream/ML-practice/blob/main/2_1_B_Unsupervised_Learning_Cluster_Analysis_(k_means).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mv5EcuDdV1ZH"
+      },
+      "source": [
+        "1. Similarity Measures: Euclidean Distance \n",
+        "Good cluster: Inter-cluster distance is maximized and intra-cluster distance is maximized\n",
+        "\n",
+        "minCostFunction:Compute ratio \n",
+        "= [sum of squared distances for a given k] / [sum of squared distances to the mean of all the records (k = 1)] \n",
+        "\n",
+        "2. \n",
+        "*   Strength <br/>\n",
+        "    Relatively efficient<br/>\n",
+        "    Simple implementation<br/>\n",
+        "\n",
+        "\n",
+        "*   Weakness<br/>\n",
+        "    Need to specify k, the number of clusters, in advance <br/>\n",
+        "    Unable to handle noisy data and outliers well<br/>\n",
+        "    Euclidian Distance(only numerical) does not work for nominal variables.<br/>\n",
+        "\n",
+        "3. \n",
+        "kmeans.cluster_centers_<br/>\n",
+        "kmeans.cluster_inertia_<br/>\n",
+        "kmeans.labels_<br/>\n",
+        "kmeans.predict(X)"
       ]
     },
     {
@@ -824,9 +854,9 @@
         "\n",
         "qcut_age = pd.cut(bank_with_cluster.age, bins, right = False)\n",
         "\n",
-        "df = pd.concat([bank_with_cluster.cluster_number, qcut_age], axis = 1)\n",
+        "df = pd.concat([bank_with_cluster.cluster_number, qcut_age], axis = 1)# !!!\n",
         "\n",
-        "cross_cluster_age = df.groupby(['cluster_number', 'age']).size().unstack().fillna(0)\n",
+        "cross_cluster_age = df.groupby(['cluster_number', 'age']).size().unstack().fillna(0)#!!!\n",
         "cross_cluster_age.head()"
       ],
       "execution_count": 68,
@@ -985,7 +1015,7 @@
       "source": [
         "hist_age = pd.value_counts(qcut_age)\n",
         "hist_age\n",
-        "sns.heatmap(cross_cluster_age.apply(lambda x:x/x.sum(), axis=1), cmap = 'Blues')"
+        "sns.heatmap(cross_cluster_age.apply(lambda x:x/x.sum(), axis=1), cmap = 'Blues')#!!!"
       ],
       "execution_count": 69,
       "outputs": [
